<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".Main4Activity">


    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menu_foundproperty"
            android:orderInCategory="1"
            app:showAsAction="never"
            android:title="@string/foundproperty_string"/>
        <item
            android:id="@+id/menu_found"
            android:orderInCategory="1"
            app:showAsAction="never"
            android:title="@string/found_string"/>

        <item
            android:id="@+id/menu_post"
            android:orderInCategory="1"
            app:showAsAction="never"
            android:title="@string/post_string"/>

        <item
            android:id="@+id/menu_pple"
            android:orderInCategory="1"
            app:showAsAction="never"
            android:title="@string/pple_string"/>

        <item
            android:id="@+id/menu_miss"
            android:orderInCategory="1"
            app:showAsAction="never"
            android:title="@string/miss_string"/>


        <item
            android:id="@+id/menu_mpesa"
            android:orderInCategory="1"
            app:showAsAction="never"
            android:title="@string/mpesa_string"/>
        <item
            android:id="@+id/menu_green"
            android:orderInCategory="1"
            app:showAsAction="never"
            android:title="@string/green_string"/>

        <item
            android:id="@+id/menu_yellow"
            android:orderInCategory="1"
            app:showAsAction="never"
            android:title="@string/yellow_string"/>
        <item
            android:id="@+id/menu_logout"
            android:orderInCategory="1"
            app:showAsAction="never"
            android:title="@string/logout_string"/>


    </group>

</menu>